--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -141,9 +141,25 @@ div.Graph{
     /* height:100%; */
     /* width : 60% ; */
     background-color: rebeccapurple;
-    align-items: flex-start;
+    /* align-items: flex-start; */
     flex : 60 ;
+    position: relative;
+
+    /* position: relative; */
      
+}
+.buttons-over-graph{
+    position: absolute;
+    /* top: 15%; */
+    /* left: 35%; */
+    top: 0;
+    left: 0;
+
+    z-index: 2;
+    text-align: center;
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
 }
 div.GraphContainer{
     /* width: 80%; */
@@ -155,13 +171,55 @@ div.GraphContainer{
     color: white;
 }
 
-.buttons-over-graph{
-    position: absolute;
-    top: 15%;
-    left: 35%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
+
+table.StockDataTable{
+    border-collapse: collapse;
+    border: 1px solid;
+    width: 100%;
     text-align: center;
+}
+th.StockDataTable{
+    border: 1px solid;
+    background-color: #1a89ff;
+}
+tr.StockDataTable:nth-child(odd){
+    border: 1px solid;
+    background-color: #e9f5ff;
+}
+tr.StockDataTable:nth-child(even){
+    border: 1px solid;
+    background-color: #8accf5;
+}
+td.StockDataTable{
+    border: 1px solid;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+td.TableHeading{
+    font-size: 32px;
+}
+table.TableHeading{
+    width: 100%;
+    text-align: center;
+}
+div.HeadingContainer{
+    width: 100%;
+}
+div.TableContainer{
+    width:80%;
+    height:90%;
+    overflow: auto;
+    padding-top: 50px;
+}
+div.IndividualTable{
+    width: 80%;
+    height: 600px;
+    overflow: auto;
+    align-items: center;
+    background-color: bisque;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 30px;
 }
 div.StockSearchDiv{
     /* display: flex; */
@@ -196,4 +254,3 @@ p.StockItem{
     background-color: white;
     border-radius: 5px;
 }
-
