starting work 27 Jab

--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Home</a></li>
+                <li> <a href="{{ url_for('sort_page') }}">Go to Stocks Page</a></li>
                 <!-- <a href="#">Home</a> -->
                 <!-- <a href="#">About us</a> -->
             </ul>
