--- a/COP_290_Assignment1-main/templates/sort.html
+++ b/COP_290_Assignment1-main/templates/sort.html
@@ -19,7 +19,7 @@
 
     <div class="container">
         <div class="sidebar">
-            <form action="/process_filters_market_cap" method="POST">
+            <!-- <form action="/process_filters_market_cap" method="POST">
                 <label for="sort">Market Cap:</label>
                 <select name="marketCap" id="sort" onchange="this.form.submit()">
                     <option value="Any" {% if filter_market_cap=="Any" %} selected {% endif %}>Any</option>
@@ -27,7 +27,7 @@
                     <option value="mid" {% if filter_market_cap=="mid" %} selected {% endif %} >Mid Market Cap(Between 8500Cr to 25000Cr)</option>
                     <option value="small" {% if filter_market_cap=="small" %} selected {% endif %} >Small Market Cap (Less than 8500 Cr)</option>
                     <!-- Add more sorting options as needed -->
-                </select>
+                <!-- </select>
             </form>
             <form action="/process_filters_pe_rat" method="POST">
                 <label for="sort">P/E Ratio:</label>
@@ -38,8 +38,8 @@
                     <option value="b_10_20" {% if filter_pe_rat=="b_10_20" %} selected {% endif %} >Between 10 and 20</option>
                     <option value="b_20_50" {% if filter_pe_rat=="b_20_50" %} selected {% endif %} >Between 20 and 50</option>
                     <option value="g50" {% if filter_pe_rat=="g50" %} selected {% endif %} >Greater than 50</option>
-                    <!-- Add more sorting options as needed -->
-                </select>
+                    Add more sorting options as needed
+                 </select>
             </form>
             <form action="/process_filters_vol" method="POST">
                 <label for="sort">Average Volume:</label>
@@ -49,7 +49,32 @@
                     <option value="b_1_10" {% if filter_avg_vol=="l5" %} selected {% endif %} >Between 1 lakh and 10 lakh</option>
                     <option value="g10" {% if filter_avg_vol=="b_5_10" %} selected {% endif %} >More than 10 lakh shares per day</option>
                 </select>
-            </form>
+            </form> -->
+
+
+        <form action="/process_filters" method="POST">
+            <label for="Volume">Volume  </label>
+            <br>
+            <input type="number" name = 'l_lim[]' placeholder="Lower Limit for Volume">
+            <input type="number" name = 'm_lim[]' placeholder="Max Limit for Volume">
+            <br>
+            <label for="pe_ratio">P/E Ratio</label>
+            <br>
+            <input type="number" name = 'l_lim[]' placeholder="Lower Limit for PE ratio">
+            <input type="number" name = 'm_lim[]' placeholder="Max Limit for PE ratio">
+            <br>
+            <label for="marketCap">Market Cap</label>
+            <br>
+            <input type="number" name = 'l_lim[]' placeholder="Lower Limit for Market Cap">
+            <input type="number" name = 'm_lim[]' placeholder="Max Limit for Market Cap">
+            <br>
+            <label for="Price">Price</label>
+            <br>
+            <input type="number" name = 'l_lim[]' placeholder="Lower Limit for Price">
+            <input type="number" name = 'm_lim[]' placeholder="Max Limit for Price">
+            <br>
+            <button type="Submit">Submit</button>
+        </form>
 
         </div>
 
